tests/baselines/reference/taggedTemplateStringsWithManyCallAndMemberExpressions.errors.txt
tests/cases/conformance/es6/templates/taggedTemplateStringsWithManyCallAndMemberExpressions.ts(13,21): error TS1160: Tagged templates are only available when targeting ECMAScript 6 and higher.


==== tests/cases/conformance/es6/templates/taggedTemplateStringsWithManyCallAndMemberExpressions.ts (1 errors) ====
    interface I {
        (strs: string[], ...subs: number[]): I;
        member: {
            new (s: string): {
                new (n: number): {
                    new (): boolean;
                }
            }
        };
    }
    var f: I;
    
    var x = new new new f `abc${ 0 }def`.member("hello")(42) === true;
                        ~~~~~~~~~~~~~~~~
!!! error TS1160: Tagged templates are only available when targeting ECMAScript 6 and higher.
    
    